<resources>
    <string name="app_name">What A Eat</string>
    <string name="SignIn">Sign In</string>
    <string name="Register">Not a Member Yet!!! Register Now</string>
    <string name="SignUp">Sign Up</string>
    <string name="ALlMember">Already Registered!!!! Login Now</string>
    <string name="EMail">E-Mail</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Menu">Menu</string>
    <string name="Cart">Cart</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
